Cambios en clase Cliente Agregar

--- a/HotelAdmin/src/Vistas/Jpanel/ClientesRegistradosGUI.form
+++ b/HotelAdmin/src/Vistas/Jpanel/ClientesRegistradosGUI.form
@@ -35,6 +35,8 @@
         </Property>
       </Properties>
       <Events>
+        <EventHandler event="focusGained" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="jTbuscadorFocusGained"/>
+        <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="jTbuscadorFocusLost"/>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTbuscadorActionPerformed"/>
       </Events>
       <Constraints>
