--- a/HotelAdmin/src/Vistas/Jpanel/jPhospedaje.form
+++ b/HotelAdmin/src/Vistas/Jpanel/jPhospedaje.form
@@ -62,6 +62,7 @@
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="70" green="70" red="70" type="rgb"/>
         </Property>
+        <Property name="horizontalAlignment" type="int" value="11"/>
         <Property name="text" type="java.lang.String" value="09"/>
       </Properties>
       <Constraints>
